manifests/openproject.yaml
# Source: openproject/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openproject
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-8.0.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '14'
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: openproject
    app.kubernetes.io/instance: openproject
    openproject/process: web
---
# Source: openproject/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject-web
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-8.0.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '14'
    openproject/process: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: openproject
      app.kubernetes.io/instance: openproject
      openproject/process: web
  template:
    metadata:
      annotations:
        # annotate pods with env value checksums so changes trigger re-deployments
        checksum/env-core: b21b819a4fe16e45ec4c4ff1bef74ad89e7b4ba3f0d2a6599f7dcab57fbbaf08
        checksum/env-memcached: 2108ee378b9475c3091a258d8277b81271c0c61b1107ab9ae9dee9f1103cbf69
        checksum/env-oidc: 45febd990f4103c64b53ad279da64f4e9be1d3472ba1dcdf35c700e970fbb8f7
        checksum/env-s3: 75b8573637845a4834f21919121ded141467669083c4e3fd5e6a1716c48884f6
        checksum/env-environment: 7dfae8244e268296401d617770ebc477b01f691a226150bc9e19946bdf37ea26
      labels:
        app.kubernetes.io/name: openproject
        helm.sh/chart: openproject-8.0.0
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: '14'
        openproject/process: web
    spec:
      securityContext:
        fsGroup: 1000
      serviceAccountName: openproject
      volumes:
      - name: tmp
          # we can't use emptyDir due to the sticky bit issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
        ephemeral:
          volumeClaimTemplate:
            metadata:
              creationTimestamp:
            spec:
              accessModes: [ReadWriteOnce]
              resources:
                requests:
                  storage: 5Gi
      - name: app-tmp
          # we can't use emptyDir due to the sticky bit / world writable issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
        ephemeral:
          volumeClaimTemplate:
            metadata:
              creationTimestamp:
            spec:
              accessModes: [ReadWriteOnce]
              resources:
                requests:
                  storage: 5Gi
      containers:
      - name: openproject
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seLinuxOptions:
          seccompProfile:
            type: RuntimeDefault
        image:
          registry.opencode.de/bmi/opendesk/components/supplier/openproject/images-mirror/open_desk:14.6.1@sha256:3c9828b1ab4dc91f2b3887f9bfddda8ba79b92a2f335dd2db2295d14a98deab0
        imagePullPolicy: IfNotPresent
        command:
        - bash
        - /app/docker/prod/web
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /app/tmp
          name: app-tmp
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health_checks/default
            port: 8080
            httpHeaders:
                # required otherwise health check will return 404 because health check is done using the Pod IP, which may cause issues with downstream variants
            - name: Host
              value: localhost
          initialDelaySeconds: 300
          timeoutSeconds: 3
          periodSeconds: 30
          failureThreshold: 30
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health_checks/default
            port: 8080
            httpHeaders:
                # required otherwise health check will return 404 because health check is done using the Pod IP, which may cause issues with downstream variants
            - name: Host
              value: localhost
          initialDelaySeconds: 150
          timeoutSeconds: 3
          periodSeconds: 15
          failureThreshold: 30
          successThreshold: 1
        resources:
          requests:
            cpu: 0.1
            memory: 768Mi
---
# Source: openproject/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject-worker-default
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-8.0.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '14'
    openproject/process: worker-default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: openproject
      app.kubernetes.io/instance: openproject
      openproject/process: worker-default
  template:
    metadata:
      annotations:
        # annotate pods with env value checksums so changes trigger re-deployments
        checksum/env-core: b21b819a4fe16e45ec4c4ff1bef74ad89e7b4ba3f0d2a6599f7dcab57fbbaf08
        checksum/env-memcached: 2108ee378b9475c3091a258d8277b81271c0c61b1107ab9ae9dee9f1103cbf69
        checksum/env-oidc: 45febd990f4103c64b53ad279da64f4e9be1d3472ba1dcdf35c700e970fbb8f7
        checksum/env-s3: 75b8573637845a4834f21919121ded141467669083c4e3fd5e6a1716c48884f6
        checksum/env-environment: 7dfae8244e268296401d617770ebc477b01f691a226150bc9e19946bdf37ea26
      labels:
        app.kubernetes.io/name: openproject
        helm.sh/chart: openproject-8.0.0
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: '14'
        openproject/process: worker-default
    spec:
      securityContext:
        fsGroup: 1000
      serviceAccountName: openproject
      volumes:
      - name: tmp
          # we can't use emptyDir due to the sticky bit issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
        ephemeral:
          volumeClaimTemplate:
            metadata:
              creationTimestamp:
            spec:
              accessModes: [ReadWriteOnce]
              resources:
                requests:
                  storage: 5Gi
      - name: app-tmp
          # we can't use emptyDir due to the sticky bit / world writable issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
        ephemeral:
          volumeClaimTemplate:
            metadata:
              creationTimestamp:
            spec:
              accessModes: [ReadWriteOnce]
              resources:
                requests:
                  storage: 5Gi
      containers:
      - name: openproject
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seLinuxOptions:
          seccompProfile:
            type: RuntimeDefault
        image:
          registry.opencode.de/bmi/opendesk/components/supplier/openproject/images-mirror/open_desk:14.6.1@sha256:3c9828b1ab4dc91f2b3887f9bfddda8ba79b92a2f335dd2db2295d14a98deab0
        imagePullPolicy: IfNotPresent
        command:
        - bash
        - /app/docker/prod/worker
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /app/tmp
          name: app-tmp
        resources:
          requests:
            cpu: 0.25
            memory: 512Mi
---
# Source: openproject/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-8.0.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '14'
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-read-timeout: 60s
    nginx.org/proxy-send-timeout: 60s
spec:
  tls:
  - hosts:
    - projects.opendesk.apps.digilab.network
    secretName: opendesk-certificates-tls
  rules:
  - host: projects.opendesk.apps.digilab.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openproject
            port:
              name: http
---
# Source: openproject/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: openproject-test-connection
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-8.0.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '14'
  annotations:
    helm.sh/hook: test
spec:
  containers:
  - name: wget
    image: busybox
    command: [wget]
    args:
    - --no-verbose
    - --tries=1
    - --spider
    - openproject:8080/health_check
  restartPolicy: Never
